<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SpaceTrail</string>
    <string name="welcome">Welcome to Space Trail</string>
    <string name="action_settings">Settings</string>
    <string name="new_game">New Game</string>
    <string name="load_game">Load Game</string>
    <string name="instructions">Instructions</string>
    <string name="newGameMenu">Please select your explorer\'s names!</string>
    <string name="capName">Spaceship Captain\'s Name:</string>
    <string name="name">Name</string>
    <string name="buyResources">Buy Resources!</string>
    <string name="headToSpace">Head to Space!</string>
    <string name="otherMembers">Name of other space adventurer\'s</string>
    <string name="money">Money:</string>
    <string name="toSpend">to spend</string>
    <string name="fuel">Fuel @ $5.00</string>
    <string name="food">Food @ $4.00</string>
    <string name="enginePart">Spare Engines @ $100.00</string>
ship    <string name="aluminumPart">Aluminum @ $10.00</string>
    <string name="wings">Spare Wings @ $100.00</string>
    <string name="livingBay">Spare Living Bay @ $100.00</string>
    <string name="buy">Buy!</string>
    <string name="quantityYouHave">Quantity You Have</string>
    <string name="title_activity_load_game">load_game</string>
    <string name="loadGameMenu">GAME INFORMATION</string>
    <string name="loadGame_PeopleMenu">People:</string>
    <string name="loadGame_ShipMenu">Ship:</string>
    <string name="loadGame_ResourceMenu">Resources:</string>
    <string name="Captain_Name">Captain</string>
    <string name="People_Name1">Name1</string>
    <string name="People_Info1">Info1</string>
    <string name="loadGame_CurrentPlanet">Planet</string>
    <string name="ShipParts_Engine">Engine</string>
    <string name="ShipParts_Living_Bay">Living Bay</string>
    <string name="ShipParts_Hull">Hull</string>
    <string name="ShipParts_Wing">Wings</string>
    <string name="Resources_fuel">Fuel</string>
    <string name="Resources_food">Food</string>
    <string name="Resources_EngPrts">Spare Engines</string>
    <string name="Resources_AlumPrts">Aluminum</string>
    <string name="Resources_SprWings">Spare Wings</string>
    <string name="Resources_SprLivingBays">Spare Living Bays</string>
    <string name="title_activity_space">SpaceActivity</string>
    <string name="title_activity_game_screen">game_screen</string>
    <string name="gameScreen_travel">Travel</string>
    <string name="gameScreen_info">Information</string>
    <string name="title_activity_game_info">game_info</string>
    <string name="gameInfo_back">Back</string>
    <string name="promptExit">Are you sure you want to quit? Your game will be saved.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="instruction_text">Hello explorer!\n\nYou have traveled thousands of lightyears to explore other galaxies and have just entered a new solar system. This solar system has eight different planets, each with their own qualities and distinctions. To gather information about each of these planets, you will need to travel to each one and conduct research.\n\nAs an experienced space explorer like yourself would know, there are many challenges and difficulties that can arise with exploring unknown galaxies. Be cautious in all of your actions so you can make it back to your home planet with all your new data! Make sure to conserve your resources and make sure to not stay too long on planets that have atmospheres that are toxic to your race!\n\nWhen you press the start button, you will be able to purchase the resources you will need for your journey through the new solar system. You will be able to buy food, fuel, and spare parts. You will be able to purchase additional supplies on your journey on different planets, however the costs will change depending on the planet you are currently visiting.You will also be able to mine asteroids for fuel when traveling, however this comes at a risk of asteroids hitting you and damaging your ship.\n\nSome helpful tips! Tap the screen to move the spaceship toward the planet when on the travel page. Press and hold on the screen when in the travel page to pull up a page with all of your supplies and resources. As you approach planets with compounds that your race needs, your crew\'s health will increase, however if you approach a planet with a toxic compound then your crew\'s health will decrease. Also, the elderly members of your crew (ages 75 and older) will naturally have their health decrease each turn.\n\nGood luck and safe travels!</string>
    <string name="planet_select">Which planet do you want to travel to?</string>
    <string name="issue_title">Alert! Alert! Alert!</string>
    <string name="race_info_title">Crew Information</string>
    <string name="title_activity_planet">PlanetActivity</string>
    <string name="PlanetMenuWelcome">Welcome to</string>
    <string name="nextPlanet">Head to\nNext Planet!</string>
    <string name="cost">Price: $</string>

    <string-array name="resources_array">
        <item>Fuel</item>
        <item>Food</item>
        <item>Aluminum</item>
        <item>Spare Engines</item>
        <item>Spare Wings</item>
        <item>Spare Living Bays</item>
    </string-array>
    <string-array name="pace_array">
        <item>Leisurely</item>
        <item>Normal</item>
        <item>Strenuous</item>
    </string-array>

    <string name="title_activity_exit">ExitActivity</string>
    <string name="play_again">Play Again?</string>
    <string name="title_activity_asteroid">AsteroidActivity</string>
    <string name="MenuBackInfo">Hold down the screen or press the back button to return to the game</string>
    <string name="asteroid_mine">Mine Asteroids!</string>
    <string name="changePace">Change Pace</string>
    <string name="hullPercent">Hull Health:</string>
    <string name="promptBack">Go back to main menu?</string>
    <string name="People_Name2">Name2</string>
    <string name="People_Name3">Name3</string>
    <string name="People_Name4">Name4</string>
    <string name="auto_generate">Auto Generate!</string>
    <string name="repair_hull">Repair Hull</string>
    <string name="pace">Pace</string>
    <string name="weakness">Weakness</string>
    <string name="distance_left">Distance</string>
    <string name="score">Score:</string>
    <string name="title_activity_barter">BarterActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="transaction">Complete Transaction</string>
    <string name="buy_sell">Buy/Sell</string>

</resources>
