<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/welcome" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/welcome"
        android:textSize="30sp"
        android:paddingBottom="20dp" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/new_game"
        android:id="@+id/newGameButton"
        android:layout_below="@+id/welcome"
        android:layout_centerHorizontal="true"
        android:layout_alignParentEnd="false"
        android:onClick="newGameMenu" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/load_game"
        android:id="@+id/loadGameButton"
        android:layout_below="@+id/newGameButton"
        android:layout_alignLeft="@+id/newGameButton"
        android:layout_alignStart="@+id/newGameButton"
        android:onClick="loadGameMenu" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/instructions"
        android:id="@+id/instructionButton"
        android:layout_below="@+id/loadGameButton"
        android:layout_alignLeft="@+id/loadGameButton"
        android:layout_alignStart="@+id/loadGameButton" />

</RelativeLayout>
