<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingBottom="5dp"
    android:paddingTop="10dp">

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/headToSpace"
        android:id="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:onClick="headToSpace" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/money"
        android:textStyle="bold"
        android:id="@+id/textView"
        android:layout_alignTop="@+id/moneyText"
        android:layout_toEndOf="@+id/fuelTextField"
        android:layout_alignLeft="@+id/textView3"
        android:paddingLeft="15dp" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/moneyText"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView"
        android:layout_alignBottom="@+id/toSpend"
        android:text="$$$$$"
        android:gravity="center_vertical|center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/toSpend"
        android:textStyle="bold"
        android:id="@+id/toSpend"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/moneyText"
        android:layout_toEndOf="@+id/moneyText"
        android:paddingRight="10dp" />

    <EditText
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/fuelTextField"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/foodTextField" />

    <EditText
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/foodTextField"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:layout_above="@+id/enginePartTextField" />

    <EditText
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/enginePartTextField"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:layout_above="@+id/aluminumPartsTextField" />

    <EditText
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/aluminumPartsTextField"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:layout_above="@+id/wingTextField" />

    <EditText
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/wingTextField"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:layout_above="@+id/buyButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/fuel"
        android:id="@+id/textView3"
        android:layout_alignBottom="@+id/fuelTextField"
        android:layout_toRightOf="@+id/fuelTextField"
        android:layout_toEndOf="@+id/fuelTextField"
        android:paddingLeft="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/food"
        android:id="@+id/textView4"
        android:layout_alignBottom="@+id/foodTextField"
        android:layout_toRightOf="@+id/foodTextField"
        android:layout_toEndOf="@+id/fuelTextField"
        android:paddingLeft="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/enginePart"
        android:id="@+id/textView5"
        android:layout_alignBottom="@+id/enginePartTextField"
        android:layout_toRightOf="@+id/enginePartTextField"
        android:layout_toEndOf="@+id/fuelTextField"
        android:paddingLeft="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/aluminumPart"
        android:id="@+id/textView6"
        android:layout_alignBottom="@+id/aluminumPartsTextField"
        android:layout_toRightOf="@+id/aluminumPartsTextField"
        android:layout_toEndOf="@+id/fuelTextField"
        android:paddingLeft="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/wings"
        android:id="@+id/textView7"
        android:layout_alignBottom="@+id/wingTextField"
        android:layout_toRightOf="@+id/wingTextField"
        android:layout_toEndOf="@+id/fuelTextField"
        android:paddingLeft="15dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:text="@string/buy"
        android:id="@+id/buyButton"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/wingTextField"
        android:layout_alignStart="@+id/wingTextField" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Quantity You Have"
        android:id="@+id/QtyYouHave"
        android:layout_toEndOf="@+id/toSpend"
        android:paddingBottom="40dp"
        android:layout_above="@+id/fuelQuantity"
        android:layout_toRightOf="@+id/toSpend" />

    <Space
        android:layout_width="20dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:layout_below="@+id/textView7"
        android:layout_above="@+id/buyButton"
        android:layout_alignLeft="@+id/wingTextField"
        android:layout_alignRight="@+id/wingTextField"
        android:paddingTop="10dp" />

    <TextView
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="0"
        android:id="@+id/fuelQuantity"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignLeft="@+id/QtyYouHave"
        android:layout_alignStart="@+id/QtyYouHave"
        android:clickable="false"
        android:layout_toRightOf="@+id/toSpend" />

    <TextView
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="0"
        android:id="@+id/foodQuantity"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignLeft="@+id/QtyYouHave"
        android:layout_alignStart="@+id/QtyYouHave"
        android:clickable="false" />

    <TextView
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="0"
        android:id="@+id/engineQuantity"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignLeft="@+id/QtyYouHave"
        android:layout_alignStart="@+id/QtyYouHave"
        android:clickable="false" />

    <TextView
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="0"
        android:id="@+id/alumQuantity"
        android:layout_alignBottom="@+id/textView6"
        android:layout_alignLeft="@+id/QtyYouHave"
        android:layout_alignStart="@+id/QtyYouHave"
        android:clickable="false" />

    <TextView
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="0"
        android:id="@+id/wingQuantity"
        android:layout_alignBottom="@+id/textView7"
        android:layout_alignLeft="@+id/QtyYouHave"
        android:layout_alignStart="@+id/QtyYouHave"
        android:clickable="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Resources_fuel"
        android:id="@+id/textView2"
        android:layout_toRightOf="@+id/fuelQuantity"
        android:layout_toEndOf="@+id/fuelQuantity"
        android:layout_alignBottom="@+id/fuelQuantity" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Resources_food"
        android:id="@+id/textView8"
        android:layout_toRightOf="@+id/fuelQuantity"
        android:layout_toEndOf="@+id/fuelQuantity"
        android:layout_alignBottom="@+id/foodQuantity" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Resources_EngPrts"
        android:id="@+id/textView9"
        android:layout_toRightOf="@+id/fuelQuantity"
        android:layout_toEndOf="@+id/fuelQuantity"
        android:layout_alignBottom="@+id/engineQuantity" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Resources_AlumPrts"
        android:id="@+id/textView10"
        android:layout_toRightOf="@+id/fuelQuantity"
        android:layout_toEndOf="@+id/fuelQuantity"
        android:layout_alignBottom="@+id/alumQuantity" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Resources_SprWings"
        android:id="@+id/textView11"
        android:layout_toRightOf="@+id/fuelQuantity"
        android:layout_toEndOf="@+id/fuelQuantity"
        android:layout_alignBottom="@+id/wingQuantity" />

</RelativeLayout>